# pyfonts

./: .coverage  .gitignore  404.html  Makefile  README.md  benchmark.py  doc.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.sh  sandbox.py  setup.py  sitemap.xml  test.ipynb  test.py
.github/workflows/: test.yaml
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  examples.md  index.md
docs/reference/: cache.md  load_bunny_font.md  load_font.md  load_google_font.md  preview_font.md  set_default.md  set_default_font.md
docs/stylesheets/: style.css
examples/: index.html
overrides/partials/: footer.html
pyfonts/: __init__.py  bunny.py  cache.py  decompress.py  get_font.py  google.py  google_font.py  is_valid.py  main.py  preview_font.py  utils.py
reference/cache/: index.html
reference/load_bunny_font/: index.html
reference/load_font/: index.html
reference/load_google_font/: index.html
reference/preview_font/: index.html
reference/set_default_font/: index.html
sandbox/: t.py
scripts/: coverage.sh  doc.sh
search/: search_index.json
stylesheets/: style.css
tests/: test_bunny.py  test_cache.py  test_google.py  test_is_valid.py  test_load_font.py  test_preview.py  test_preview_font.py  test_set_default.py  test_ssl_error.py  test_utils.py
