[project]
name = "pyfonts"
version = "0.0.2"
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
description = "A simple way to load fonts for matplotlib"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib"
]
dependencies = [
  "matplotlib",
  "requests>=2.32.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/JosephBARBIERDARNAL/pyfonts"
Issues = "https://github.com/JosephBARBIERDARNAL/pyfonts/issues"
