[project]
name = "pyfonts"
description = "A simple and reproducible way of using fonts in matplotlib"
version = "1.1.3"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["matplotlib", "font", "reproducibility", "google"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
  "matplotlib",
  "requests",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyfonts"]

[tool.uv.sources]
pyfonts = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "mkdocs-material>=9.6.9",
    "mkdocs-matplotlib>=0.10.1",
    "mkdocstrings-python>=1.16.5",
    "coverage>=7.9.1",
    "genbadge[coverage]>=1.1.3",
    "ty>=0.0.1a23",
]

[project.urls]
Homepage = "https://y-sunflower.github.io/pyfonts/"
Issues = "https://github.com/y-sunflower/pyfonts/issues"
Documentation = "https://y-sunflower.github.io/pyfonts/"
Repository = "https://github.com/y-sunflower/pyfonts"
